--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Document</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="fonts.css" />
 </head>
 
 <body>
   <div class="mainDiv">
+    <img src="./image/interactive-logo.svg" alt="" class="logo">
+    <h4 class="understanding">Understanding made easy - with simpleshow interactive</h4>
+    <p class="eLearning">eLearning by simpleshow combines storytelling with engaging interactions - because being active
+      makes learning easier!</p>
+    <button class="view-video">View Video</button>
 
     <img src="./image/bg.svg" alt="" class="toppic" />
     <svg version="1.1" class="svg top Layer_1" xmlns="http://www.w3.org/2000/svg"
@@ -79,6 +85,12 @@
   c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2s0.9-2,2-2 M24.3,52.4v8h-9 M22.4,33L7.3,42.4v15 M21.3,23l-21,13.1 M271.3,165.2l-7,0.3
   l-7,13h-8 M37.3,165.2l7,0.3l7,13h7 M85.3,49.4l73,43 M0.3,20.4l110,63v15c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2s0.9-2,2-2" />
     </svg>
+
+    <h3 class="menus">Menus</h3>
+    <p class="menus-des">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia odit assumenda, cupiditate
+      molestias, maiores quod culpa modi asperiores expedita ex ipsam quas, perspiciatis beatae ducimus cumque! Vel odit
+      quaerat laudantium amet?</p>
+
 
     <img src="./image/middlepic.svg" alt="" class="middlepic" />
     <svg version="1.1" id="middle" class="svg middle Layer_1" xmlns="http://www.w3.org/2000/svg"
