working on carousel

--- a/project/index.html
+++ b/project/index.html
@@ -11,14 +11,17 @@
 </head>
 
 <body>
+  <div class="mobileConsoleLog">test</div>
   <div class="mainDiv">
     <div class="topContainer">
-      <img src="./image/interactive-logo.svg" alt="" class="logo">
-      <h4 class="understanding">Understanding made easy - with simpleshow interactive</h4>
-      <p class="eLearning">eLearning by simpleshow combines storytelling with engaging interactions - because being
-        active
-        makes learning easier!</p>
-      <button class="view-video">View Video</button>
+      <div class="topWords">
+        <img src="./image/interactive-logo.svg" alt="" class="logo">
+        <h4 class="understanding">Understanding made easy - with simpleshow interactive</h4>
+        <p class="eLearning">eLearning by simpleshow combines storytelling with engaging interactions - because being
+          active
+          makes learning easier!</p>
+        <button class="view-video">View Video</button>
+      </div>
 
       <div class="blurbar blurbartop"></div>
       <img src="./image/bg.svg" alt="" class="toppic" />
@@ -97,14 +100,18 @@
         quaerat laudantium amet?</p>
       <div class="iframeContainer">
         <img src="/image/iframe.svg" alt="">
+        <img src="/image/iframe.svg" alt="">
+        <img src="/image/iframe.svg" alt="">
+        <img src="/image/iframe.svg" alt="">
+        <img src="/image/iframe.svg" alt="">
       </div>
       <button class="arrow arrowLeft"><img src="image/leftArrow.svg" alt=""></button>
       <button class="arrow arrowRight"><img src="image/rightArrow.svg" alt=""></button>
-      <div class="carouselDots dot1"></div>
-      <div class="carouselDots dot2 dotActive"></div>
-      <div class="carouselDots dot3"></div>
-      <div class="carouselDots dot4"></div>
-      <div class="carouselDots dot5"></div>
+      <span class="carouselDots dot1"></span>
+      <span class="carouselDots dot2 dotActive"></span>
+      <span class="carouselDots dot3"></span>
+      <span class="carouselDots dot4"></span>
+      <span class="carouselDots dot5"></span>
     </div>
 
     <div class="middleContainer">
