mastered the art of carouseling

--- a/project/index.html
+++ b/project/index.html
@@ -99,19 +99,19 @@
         odit
         quaerat laudantium amet?</p>
       <div class="iframeContainer">
-        <img src="/image/iframe.svg" alt="">
-        <img src="/image/iframe.svg" alt="">
-        <img src="/image/iframe.svg" alt="">
-        <img src="/image/iframe.svg" alt="">
-        <img src="/image/iframe.svg" alt="">
+        <img src="/image/iframe.svg" alt="" class="pos0 active">
+        <img src="/image/iframe.svg" alt="" class="pos1">
+        <img src="/image/iframe.svg" alt="" class="pos2">
+        <img src="/image/iframe.svg" alt="" class="pos3">
+        <img src="/image/iframe.svg" alt="" class="pos4">
       </div>
       <button class="arrow arrowLeft"><img src="image/leftArrow.svg" alt=""></button>
       <button class="arrow arrowRight"><img src="image/rightArrow.svg" alt=""></button>
+      <span class="carouselDots dot0 dotActive"></span>
       <span class="carouselDots dot1"></span>
-      <span class="carouselDots dot2 dotActive"></span>
+      <span class="carouselDots dot2"></span>
       <span class="carouselDots dot3"></span>
       <span class="carouselDots dot4"></span>
-      <span class="carouselDots dot5"></span>
     </div>
 
     <div class="middleContainer">
@@ -312,7 +312,8 @@ c0-1.6,1.3-3,2.9-3c0,0,0.1,0,0.1,0" />
 	C213.5,195.5,212,201,207.5,199.5z" />
     </svg> -->
   </div>
-  <script src="script.js"></script>
+  <script src="javascript/script.js"></script>
+  <script src="javascript/carousel.js"></script>
 </body>
 
 </html>
