--- a/project/index.html
+++ b/project/index.html
@@ -156,44 +156,49 @@ c0-1.6,1.3-3,2.9-3c0,0,0.1,0,0.1,0" />
         odit
         quaerat laudantium amet?</p>
     </div>
+    <div class="interactionIframe hidden">
+      <iframe id="inlineFrameExample" title="Inline Frame Example"
+        src="https://simpleshowinteractive.com/projects/internal/dragNdrops">
+      </iframe>
+    </div>
     <div class="optionsContainer">
       <div class="option option1">
-        <div class="optionImgContainer"></div>
+        <div class="optionImgContainer"><img src="image/dragNdrop.svg" alt=""></div>
         <h4 class="optionHeader">Drag & Drop</h4>
         <p class="optionDescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia deleniti sunt rem ex
           qui? Consequatur consectetur at corrupti laborum.</p>
         <p class="examples">Examples</p>
       </div>
       <div class="option option2">
-        <div class="optionImgContainer"></div>
+        <div class="optionImgContainer"><img src="image/hotspot.svg" alt=""></div>
         <h4 class="optionHeader">Hotspot</h4>
         <p class="optionDescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia deleniti sunt rem ex
           qui? Consequatur consectetur at corrupti laborum.</p>
         <p class="examples">Examples</p>
       </div>
       <div class="option option3">
-        <div class="optionImgContainer"></div>
+        <div class="optionImgContainer"><img src="image/quiz.svg" alt=""></div>
         <h4 class="optionHeader">Quiz</h4>
         <p class="optionDescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia deleniti sunt rem ex
           qui? Consequatur consectetur at corrupti laborum.</p>
         <p class="examples">Examples</p>
       </div>
       <div class="option option4">
-        <div class="optionImgContainer"></div>
+        <div class="optionImgContainer"><img src="image/sortable1.svg" alt=""></div>
         <h4 class="optionHeader">Sortables Type 1</h4>
         <p class="optionDescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia deleniti sunt rem ex
           qui? Consequatur consectetur at corrupti laborum.</p>
         <p class="examples">Examples</p>
       </div>
       <div class="option option5">
-        <div class="optionImgContainer"></div>
+        <div class="optionImgContainer"><img src="image/sortable2.svg" alt=""></div>
         <h4 class="optionHeader">Sortables Type 2</h4>
         <p class="optionDescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia deleniti sunt rem ex
           qui? Consequatur consectetur at corrupti laborum.</p>
         <p class="examples">Examples</p>
       </div>
       <div class="option option6">
-        <div class="optionImgContainer"></div>
+        <div class="optionImgContainer"><img src="image/custom.svg" alt=""></div>
         <h4 class="optionHeader">Custom</h4>
         <p class="optionDescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia deleniti sunt rem ex
           qui? Consequatur consectetur at corrupti laborum.</p>
@@ -238,81 +243,12 @@ c0-1.6,1.3-3,2.9-3c0,0,0.1,0,0.1,0" />
 	S242.4,65.5,243.5,65.5z M243.5,69.5v11l-10,10.2 M254.5,84.5c1.7,0,3,1.3,3,3s-1.3,3-3,3s-3-1.3-3-3S252.8,84.5,254.5,84.5z
 	 M254.5,90.5v14l-7,15V166 M290.5,0.5c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2S289.4,0.5,290.5,0.5z M290.5,4.5v50l-9,13v32" />
       </svg>
+      <p class="see-more">See more of what we can make for you!</p>
+      <button class="lets-go"><span class="btn-text">Let's Go!</span> <span class="btn-arrow">❯</></button>
     </div>
-    <!-- <svg version="1.1" id="bottom" class="svg bottom Layer_1" xmlns="http://www.w3.org/2000/svg"
-      xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 294 252.9"
-      style="enable-background:new 0 0 294 252.9;" xml:space="preserve">
-      <title>bottom</title>
-      <path fill="none" class="svgPath path5 animate" d="M3.5,16.5c1.7,0,3,1.3,3,3s-1.3,3-3,3s-3-1.3-3-3S1.8,16.5,3.5,16.5z M3.5,22.5v48l9,11v26l-3,2v10l-3,2v13
-	l-1,1v76l13,8l9-4 M23.5,41.5v5l-11,15v20 M32.5,60.5c1.1,0,2,0.9,2,2s-0.9,2-2,2c-1.1,0-2-0.9-2-2S31.4,60.5,32.5,60.5z M32.5,64.5
-	v8l-9,11v24 M45.5,99.5c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2S44.4,99.5,45.5,99.5z M45.5,103.5v68 M54.5,83.5c1.1,0,2,0.9,2,2
-	s-0.9,2-2,2s-2-0.9-2-2S53.4,83.5,54.5,83.5z M54.5,87.5v16l-9,14 M12.5,107.5l5-3l15,8l-9,6v8 M9.5,110.7l14,7.8 M32.5,112.5v9
-	l-10,5l-13-7 M32.5,120.5l4,2v10l3,1v39l-11,7v48l13,8 M6.5,133.5l14,7 M36.5,132.5l-16,8v-10l-14-8.1 M39.5,134.5l-20,10l-14-8.3
-	 M19.5,144.5v60 M58.5,177.5l-16,9v49l16-9V177.5l-15-8l-4,3 M28.5,179.5l14,7 M82.5,41.5v52l-9,16v18l6,8v78l-17,10 M73.5,127.5
-	l-10-11l-15,16v39.7 M79.5,138.4l-1,1.1l-4-4l-3,9l-5-7l-4,8l-6-9l-4,5l-4-7.5 M52.5,141.5l0.4,33 M71.5,144.5v52 M79.5,193.5l-17,6
-	v-54 M58.5,198.1l4,1.4 M79.5,195.6l-17,6.9l-4-2 M58.5,221.4l4,2.1v-18l17-6 M58.5,204.5l4,1 M222.5,80.5c1.7,0,3,1.3,3,3
-	s-1.3,3-3,3s-3-1.3-3-3S220.8,80.5,222.5,80.5z M222.5,86.5v46c0,0-13,10-19,24s-11,35-8,43s5,11,14,10c0,0,10-4,9-4v-45
-	c0,0-3-1-1-6s3-6,3-9s5,6,3,6s1,1,2-2s1,9-1,10s-6,1-6,1 M227.5,171.5l15,9v48l-15-8V171.5c0,0,13-8,15-8s2-10,2-10c-2-2-5,1-6,3
-	s-4,3-4,3l4-19c1-23-16-8-16-8 M242.5,163.5l14,7v25l29,15v40l-4,2 M256.5,195.5l-2-1l-3,2v41 M251.5,222.5l30,17 M251.5,196.4
-	l30,15.1v41 M256.5,170.5l-14,9 M233.5,41.5v58l-11,11.2 M243.5,65.5c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2S242.4,65.5,243.5,65.5z
-	 M243.5,69.5v11l-10,10.2 M254.5,84.5c1.7,0,3,1.3,3,3s-1.3,3-3,3s-3-1.3-3-3S252.8,84.5,254.5,84.5z M254.5,90.5v14l-7,15V166
-	 M290.5,0.5c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2S289.4,0.5,290.5,0.5z M290.5,4.5v50l-9,13v32l12,6v101l-3,2v18l-5,2.6
-	 M281.5,99.5l-4-1l-24,23V169 M253.5,121.5l14,8v55l-4,2l0,12.6 M263.5,186.5l14,9v10.9 M267.5,184.5l8-4l15,8l-13,7 M290.5,188.5
-	v20 M233.5,128.5c0,0-26,8-34,51s19,26,19,26v8c0,5,2,5,2,5l2-1l2-58 M213.5,155.5c1.6,0.4,2.3,4.7,1,8s-4.6,5.7-6,5s-0.8-4.6,0-7
-	C209.5,158.6,211.9,155.1,213.5,155.5z M204.5,185.5c-1.7-1-1.5-4.2-1-6c0.8-2.6,3.1-5.4,5-5c2.1,0.5,3.6,4.9,2,8
-	C209.3,184.8,206.3,186.5,204.5,185.5z M207.5,199.5c-0.6-0.2-2.1-3.6-1-7c1-3.1,4.2-5.8,6-5c1.5,0.7,2.1,4,1,8
-	C213.5,195.5,212,201,207.5,199.5z" />
-    </svg>
-    <svg version="1.1" id="bottom" class="svg bottom Layer_2" xmlns="http://www.w3.org/2000/svg"
-      xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 294 252.9"
-      style="enable-background:new 0 0 294 252.9;" xml:space="preserve">
-      <title>bottom</title>
-      <path fill="none" class="svgPath path6 animate" d="M3.5,16.5c1.7,0,3,1.3,3,3s-1.3,3-3,3s-3-1.3-3-3S1.8,16.5,3.5,16.5z M3.5,22.5v48l9,11v26l-3,2v10l-3,2v13
-	l-1,1v76l13,8l9-4 M23.5,41.5v5l-11,15v20 M32.5,60.5c1.1,0,2,0.9,2,2s-0.9,2-2,2c-1.1,0-2-0.9-2-2S31.4,60.5,32.5,60.5z M32.5,64.5
-	v8l-9,11v24 M45.5,99.5c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2S44.4,99.5,45.5,99.5z M45.5,103.5v68 M54.5,83.5c1.1,0,2,0.9,2,2
-	s-0.9,2-2,2s-2-0.9-2-2S53.4,83.5,54.5,83.5z M54.5,87.5v16l-9,14 M12.5,107.5l5-3l15,8l-9,6v8 M9.5,110.7l14,7.8 M32.5,112.5v9
-	l-10,5l-13-7 M32.5,120.5l4,2v10l3,1v39l-11,7v48l13,8 M6.5,133.5l14,7 M36.5,132.5l-16,8v-10l-14-8.1 M39.5,134.5l-20,10l-14-8.3
-	 M19.5,144.5v60 M58.5,177.5l-16,9v49l16-9V177.5l-15-8l-4,3 M28.5,179.5l14,7 M82.5,41.5v52l-9,16v18l6,8v78l-17,10 M73.5,127.5
-	l-10-11l-15,16v39.7 M79.5,138.4l-1,1.1l-4-4l-3,9l-5-7l-4,8l-6-9l-4,5l-4-7.5 M52.5,141.5l0.4,33 M71.5,144.5v52 M79.5,193.5l-17,6
-	v-54 M58.5,198.1l4,1.4 M79.5,195.6l-17,6.9l-4-2 M58.5,221.4l4,2.1v-18l17-6 M58.5,204.5l4,1 M222.5,80.5c1.7,0,3,1.3,3,3
-	s-1.3,3-3,3s-3-1.3-3-3S220.8,80.5,222.5,80.5z M222.5,86.5v46c0,0-13,10-19,24s-11,35-8,43s5,11,14,10c0,0,10-4,9-4v-45
-	c0,0-3-1-1-6s3-6,3-9s5,6,3,6s1,1,2-2s1,9-1,10s-6,1-6,1 M227.5,171.5l15,9v48l-15-8V171.5c0,0,13-8,15-8s2-10,2-10c-2-2-5,1-6,3
-	s-4,3-4,3l4-19c1-23-16-8-16-8 M242.5,163.5l14,7v25l29,15v40l-4,2 M256.5,195.5l-2-1l-3,2v41 M251.5,222.5l30,17 M251.5,196.4
-	l30,15.1v41 M256.5,170.5l-14,9 M233.5,41.5v58l-11,11.2 M243.5,65.5c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2S242.4,65.5,243.5,65.5z
-	 M243.5,69.5v11l-10,10.2 M254.5,84.5c1.7,0,3,1.3,3,3s-1.3,3-3,3s-3-1.3-3-3S252.8,84.5,254.5,84.5z M254.5,90.5v14l-7,15V166
-	 M290.5,0.5c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2S289.4,0.5,290.5,0.5z M290.5,4.5v50l-9,13v32l12,6v101l-3,2v18l-5,2.6
-	 M281.5,99.5l-4-1l-24,23V169 M253.5,121.5l14,8v55l-4,2l0,12.6 M263.5,186.5l14,9v10.9 M267.5,184.5l8-4l15,8l-13,7 M290.5,188.5
-	v20 M233.5,128.5c0,0-26,8-34,51s19,26,19,26v8c0,5,2,5,2,5l2-1l2-58 M213.5,155.5c1.6,0.4,2.3,4.7,1,8s-4.6,5.7-6,5s-0.8-4.6,0-7
-	C209.5,158.6,211.9,155.1,213.5,155.5z M204.5,185.5c-1.7-1-1.5-4.2-1-6c0.8-2.6,3.1-5.4,5-5c2.1,0.5,3.6,4.9,2,8
-	C209.3,184.8,206.3,186.5,204.5,185.5z M207.5,199.5c-0.6-0.2-2.1-3.6-1-7c1-3.1,4.2-5.8,6-5c1.5,0.7,2.1,4,1,8
-	C213.5,195.5,212,201,207.5,199.5z" />
-    </svg>
-    <svg version="1.1" id="bottom" class="svg bottom Layer_3" xmlns="http://www.w3.org/2000/svg"
-      xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 294 252.9"
-      style="enable-background:new 0 0 294 252.9;" xml:space="preserve">
-      <title>bottom</title>
-      <path fill="none" class="svgPath path6 animate" d="M3.5,16.5c1.7,0,3,1.3,3,3s-1.3,3-3,3s-3-1.3-3-3S1.8,16.5,3.5,16.5z M3.5,22.5v48l9,11v26l-3,2v10l-3,2v13
-	l-1,1v76l13,8l9-4 M23.5,41.5v5l-11,15v20 M32.5,60.5c1.1,0,2,0.9,2,2s-0.9,2-2,2c-1.1,0-2-0.9-2-2S31.4,60.5,32.5,60.5z M32.5,64.5
-	v8l-9,11v24 M45.5,99.5c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2S44.4,99.5,45.5,99.5z M45.5,103.5v68 M54.5,83.5c1.1,0,2,0.9,2,2
-	s-0.9,2-2,2s-2-0.9-2-2S53.4,83.5,54.5,83.5z M54.5,87.5v16l-9,14 M12.5,107.5l5-3l15,8l-9,6v8 M9.5,110.7l14,7.8 M32.5,112.5v9
-	l-10,5l-13-7 M32.5,120.5l4,2v10l3,1v39l-11,7v48l13,8 M6.5,133.5l14,7 M36.5,132.5l-16,8v-10l-14-8.1 M39.5,134.5l-20,10l-14-8.3
-	 M19.5,144.5v60 M58.5,177.5l-16,9v49l16-9V177.5l-15-8l-4,3 M28.5,179.5l14,7 M82.5,41.5v52l-9,16v18l6,8v78l-17,10 M73.5,127.5
-	l-10-11l-15,16v39.7 M79.5,138.4l-1,1.1l-4-4l-3,9l-5-7l-4,8l-6-9l-4,5l-4-7.5 M52.5,141.5l0.4,33 M71.5,144.5v52 M79.5,193.5l-17,6
-	v-54 M58.5,198.1l4,1.4 M79.5,195.6l-17,6.9l-4-2 M58.5,221.4l4,2.1v-18l17-6 M58.5,204.5l4,1 M222.5,80.5c1.7,0,3,1.3,3,3
-	s-1.3,3-3,3s-3-1.3-3-3S220.8,80.5,222.5,80.5z M222.5,86.5v46c0,0-13,10-19,24s-11,35-8,43s5,11,14,10c0,0,10-4,9-4v-45
-	c0,0-3-1-1-6s3-6,3-9s5,6,3,6s1,1,2-2s1,9-1,10s-6,1-6,1 M227.5,171.5l15,9v48l-15-8V171.5c0,0,13-8,15-8s2-10,2-10c-2-2-5,1-6,3
-	s-4,3-4,3l4-19c1-23-16-8-16-8 M242.5,163.5l14,7v25l29,15v40l-4,2 M256.5,195.5l-2-1l-3,2v41 M251.5,222.5l30,17 M251.5,196.4
-	l30,15.1v41 M256.5,170.5l-14,9 M233.5,41.5v58l-11,11.2 M243.5,65.5c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2S242.4,65.5,243.5,65.5z
-	 M243.5,69.5v11l-10,10.2 M254.5,84.5c1.7,0,3,1.3,3,3s-1.3,3-3,3s-3-1.3-3-3S252.8,84.5,254.5,84.5z M254.5,90.5v14l-7,15V166
-	 M290.5,0.5c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2S289.4,0.5,290.5,0.5z M290.5,4.5v50l-9,13v32l12,6v101l-3,2v18l-5,2.6
-	 M281.5,99.5l-4-1l-24,23V169 M253.5,121.5l14,8v55l-4,2l0,12.6 M263.5,186.5l14,9v10.9 M267.5,184.5l8-4l15,8l-13,7 M290.5,188.5
-	v20 M233.5,128.5c0,0-26,8-34,51s19,26,19,26v8c0,5,2,5,2,5l2-1l2-58 M213.5,155.5c1.6,0.4,2.3,4.7,1,8s-4.6,5.7-6,5s-0.8-4.6,0-7
-	C209.5,158.6,211.9,155.1,213.5,155.5z M204.5,185.5c-1.7-1-1.5-4.2-1-6c0.8-2.6,3.1-5.4,5-5c2.1,0.5,3.6,4.9,2,8
-	C209.3,184.8,206.3,186.5,204.5,185.5z M207.5,199.5c-0.6-0.2-2.1-3.6-1-7c1-3.1,4.2-5.8,6-5c1.5,0.7,2.1,4,1,8
-	C213.5,195.5,212,201,207.5,199.5z" />
-    </svg> -->
   </div>
   <script src="javascript/script.js"></script>
+  <script src="javascript/drawScroll.js"></script>
   <script src="javascript/carousel.js"></script>
 </body>
 
