--- a/project/index.html
+++ b/project/index.html
@@ -12,6 +12,11 @@
 
 <body>
   <div class="mobileConsoleLog">test</div>
+  <div class="interactionIframe hidden">
+    <iframe id="inlineFrameExample" title="Inline Frame Example"
+      src="https://simpleshowinteractive.com/projects/internal/dragNdrops">
+    </iframe>
+  </div>
   <div class="mainDiv">
     <div class="topContainer">
       <div class="topWords">
@@ -99,11 +104,11 @@
         odit
         quaerat laudantium amet?</p>
       <div class="iframeContainer">
-        <img src="/image/iframe.svg" alt="" class="pos0 active">
-        <img src="/image/iframe.svg" alt="" class="pos1">
-        <img src="/image/iframe.svg" alt="" class="pos2">
-        <img src="/image/iframe.svg" alt="" class="pos3">
-        <img src="/image/iframe.svg" alt="" class="pos4">
+        <img src="image/iframe.svg" alt="" class="pos0 active">
+        <img src="image/iframe.svg" alt="" class="pos1">
+        <img src="image/iframe.svg" alt="" class="pos2">
+        <img src="image/iframe.svg" alt="" class="pos3">
+        <img src="image/iframe.svg" alt="" class="pos4">
       </div>
       <button class="arrow arrowLeft"><img src="image/leftArrow.svg" alt=""></button>
       <button class="arrow arrowRight"><img src="image/rightArrow.svg" alt=""></button>
@@ -155,11 +160,6 @@ c0-1.6,1.3-3,2.9-3c0,0,0.1,0,0.1,0" />
         molestias, maiores quod culpa modi asperiores expedita ex ipsam quas, perspiciatis beatae ducimus cumque! Vel
         odit
         quaerat laudantium amet?</p>
-    </div>
-    <div class="interactionIframe hidden">
-      <iframe id="inlineFrameExample" title="Inline Frame Example"
-        src="https://simpleshowinteractive.com/projects/internal/dragNdrops">
-      </iframe>
     </div>
     <div class="optionsContainer">
       <div class="option option1">
