--- a/project/index.html
+++ b/project/index.html
@@ -50,14 +50,13 @@
         s0.9-2,2-2 M144.3,1.4l-102,61v80c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2s0.9-2,2-2 M127.3,0.4l-93,57l-1,92l4,6v19c1.1,0,2,0.9,2,2
         s-0.9,2-2,2s-2-0.9-2-2s0.9-2,2-2 M33.3,117.4h-8v10c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2s0.9-2,2-2 M22.2,43.1l-7,4.4v116l6,7v64
         c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2s0.9-2,2-2 M24.3,52.4v8h-9 M22.4,33L7.3,42.4v15 M21.3,23l-21,13.1 M271.3,165.2l-7,0.3
-        l-7,13h-8 M37.3,165.2l7,0.3l7,13h7 M85.3,49.4l73,43 M0.3,20.4l110,63v15c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2s0.9-2,2-2" />
+        l-7,13h-8 M37.3,165.2l7,0.3l7,13h7 M85.3,49.4l73,43 M0.3,20.4l110,63v15c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2s0.9-2,2-2"></path>
       </svg>
       <svg version="1.1" class="svg top Layer_2" xmlns="http://www.w3.org/2000/svg"
         xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 307.5 239"
         style="enable-background:new 0 0 307.5 239;" xml:space="preserve">
         <title>top</title>
-        <path fill="none" class="svgPath path2 animate"
-          d="M0.3,30.4l101,58 M13.3,18.4l120,69 M21.3,12.4l-21,13.9 M31.3,7.4l144,84 M79.3,24.4l104,62
+        <path fill="none" class="svgPath path2 animate" d="M0.3,30.4l101,58 M13.3,18.4l120,69 M21.3,12.4l-21,13.9 M31.3,7.4l144,84 M79.3,24.4l104,62
       M89.3,19.4l124,73v13c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2c0.1-1.1,0.9-1.9,2-2 M97.3,14.4l125,73v5c0.6,0,1,0.4,1,1s-0.4,1-1,1
       c-0.5,0-1-0.5-1-1c0-0.6,0.4-1,1-1 M115.3,14.4l116,68v5 M120.3,6.4l120,71v16c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2s0.9-2,2-2
       M135.3,5.4l114,67v7 M156.3,10.4c1,1,102,57,102,57v49c1.3,0.4,2.2,1.6,2,3c-0.2,1-1,1.8-2,2c-1.5,0.3-3-1-3-2s0-3,3-3
@@ -72,14 +71,14 @@
       s0.9-2,2-2 M144.3,1.4l-102,61v80c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2s0.9-2,2-2 M127.3,0.4l-93,57l-1,92l4,6v19c1.1,0,2,0.9,2,2
       s-0.9,2-2,2s-2-0.9-2-2s0.9-2,2-2 M33.3,117.4h-8v10c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2s0.9-2,2-2 M22.2,43.1l-7,4.4v116l6,7v64
       c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2s0.9-2,2-2 M24.3,52.4v8h-9 M22.4,33L7.3,42.4v15 M21.3,23l-21,13.1 M271.3,165.2l-7,0.3
-      l-7,13h-8 M37.3,165.2l7,0.3l7,13h7 M85.3,49.4l73,43 M0.3,20.4l110,63v15c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2s0.9-2,2-2" />
+      l-7,13h-8 M37.3,165.2l7,0.3l7,13h7 M85.3,49.4l73,43
+      M0.3,20.4l110,63v15c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2s0.9-2,2-2"></path>
       </svg>
       <svg version="1.1" class="svg top Layer_3" xmlns="http://www.w3.org/2000/svg"
         xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 307.5 239"
         style="enable-background:new 0 0 307.5 239;" xml:space="preserve">
         <title>top</title>
-        <path fill="none" class="svgPath path2 animate"
-          d="M0.3,30.4l101,58 M13.3,18.4l120,69 M21.3,12.4l-21,13.9 M31.3,7.4l144,84 M79.3,24.4l104,62
+        <path fill="none" class="svgPath path2 animate" d="M0.3,30.4l101,58 M13.3,18.4l120,69 M21.3,12.4l-21,13.9 M31.3,7.4l144,84 M79.3,24.4l104,62
     M89.3,19.4l124,73v13c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2c0.1-1.1,0.9-1.9,2-2 M97.3,14.4l125,73v5c0.6,0,1,0.4,1,1s-0.4,1-1,1
     c-0.5,0-1-0.5-1-1c0-0.6,0.4-1,1-1 M115.3,14.4l116,68v5 M120.3,6.4l120,71v16c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2s0.9-2,2-2
     M135.3,5.4l114,67v7 M156.3,10.4c1,1,102,57,102,57v49c1.3,0.4,2.2,1.6,2,3c-0.2,1-1,1.8-2,2c-1.5,0.3-3-1-3-2s0-3,3-3
@@ -94,7 +93,8 @@
     s0.9-2,2-2 M144.3,1.4l-102,61v80c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2s0.9-2,2-2 M127.3,0.4l-93,57l-1,92l4,6v19c1.1,0,2,0.9,2,2
     s-0.9,2-2,2s-2-0.9-2-2s0.9-2,2-2 M33.3,117.4h-8v10c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2s0.9-2,2-2 M22.2,43.1l-7,4.4v116l6,7v64
     c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2s0.9-2,2-2 M24.3,52.4v8h-9 M22.4,33L7.3,42.4v15 M21.3,23l-21,13.1 M271.3,165.2l-7,0.3
-    l-7,13h-8 M37.3,165.2l7,0.3l7,13h7 M85.3,49.4l73,43 M0.3,20.4l110,63v15c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2s0.9-2,2-2" />
+    l-7,13h-8 M37.3,165.2l7,0.3l7,13h7 M85.3,49.4l73,43
+    M0.3,20.4l110,63v15c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2s0.9-2,2-2"></path>
       </svg>
 
       <h3 class="menus">Menus</h3>
@@ -129,7 +129,7 @@
   s-0.9,2-2,2s-2-0.9-2-2s0.9-2,2-2 M58.5,24v66l6,9h12c0-1.1,0.9-2,2-2s2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2 M203.5,48v44l-5,8h-13
   c0,1.1-0.9,2-2,2s-2-0.9-2-2s0.9-2,2-2s2,0.9,2,2 M229.5,33v30l10,11v24c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2s0.9-2,2-2 M236.5,29
   v22l8,11v7c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2s0.9-2,2-2 M243.5,20l17,24v31l6,8v31c1.7,0,3,1.3,3,3s-1.3,3-3,3s-3-1.3-3-3
-  c0-1.6,1.3-3,2.9-3c0,0,0.1,0,0.1,0" />
+  c0-1.6,1.3-3,2.9-3c0,0,0.1,0,0.1,0"></path>
       </svg>
       <svg version="1.1" id="middle" class="svg middle Layer_2" xmlns="http://www.w3.org/2000/svg"
         xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 270 120.5"
@@ -140,7 +140,7 @@ s-0.9,2-2,2s-2-0.9-2-2s0.9-2,2-2 M51.5,19v40c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2
 s-0.9,2-2,2s-2-0.9-2-2s0.9-2,2-2 M58.5,24v66l6,9h12c0-1.1,0.9-2,2-2s2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2 M203.5,48v44l-5,8h-13
 c0,1.1-0.9,2-2,2s-2-0.9-2-2s0.9-2,2-2s2,0.9,2,2 M229.5,33v30l10,11v24c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2s0.9-2,2-2 M236.5,29
 v22l8,11v7c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2s0.9-2,2-2 M243.5,20l17,24v31l6,8v31c1.7,0,3,1.3,3,3s-1.3,3-3,3s-3-1.3-3-3
-c0-1.6,1.3-3,2.9-3c0,0,0.1,0,0.1,0" />
+c0-1.6,1.3-3,2.9-3c0,0,0.1,0,0.1,0"></path>
       </svg>
       <svg version="1.1" id="middle" class="svg middle Layer_3" xmlns="http://www.w3.org/2000/svg"
         xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 270 120.5"
@@ -151,7 +151,7 @@ s-0.9,2-2,2s-2-0.9-2-2s0.9-2,2-2 M51.5,19v40c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2
 s-0.9,2-2,2s-2-0.9-2-2s0.9-2,2-2 M58.5,24v66l6,9h12c0-1.1,0.9-2,2-2s2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2 M203.5,48v44l-5,8h-13
 c0,1.1-0.9,2-2,2s-2-0.9-2-2s0.9-2,2-2s2,0.9,2,2 M229.5,33v30l10,11v24c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2s0.9-2,2-2 M236.5,29
 v22l8,11v7c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2s0.9-2,2-2 M243.5,20l17,24v31l6,8v31c1.7,0,3,1.3,3,3s-1.3,3-3,3s-3-1.3-3-3
-c0-1.6,1.3-3,2.9-3c0,0,0.1,0,0.1,0" />
+c0-1.6,1.3-3,2.9-3c0,0,0.1,0,0.1,0"></path>
       </svg>
       <h3 class="interactiveOptions">Interactive Options</h3>
       <p class="interactive-des">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia odit assumenda,
@@ -160,6 +160,7 @@ c0-1.6,1.3-3,2.9-3c0,0,0.1,0,0.1,0" />
         odit
         quaerat laudantium amet?</p>
     </div>
+
     <div class="optionsContainer">
       <div class="option option1" data-src="https://simpleshowinteractive.com/projects/internal/dragNdrops">
         <div class="optionImgContainer"><img src="image/dragNdrop.svg" alt=""></div>
@@ -204,19 +205,20 @@ c0-1.6,1.3-3,2.9-3c0,0,0.1,0,0.1,0" />
         <p class="examples">Examples</p>
       </div>
     </div>
+
     <div class="bottomContainer">
       <img src="./image/bottompic.svg" alt="" class="bottompic" />
       <svg version="1.1" id="bottom" class="svg bottom Layer_1" xmlns="http://www.w3.org/2000/svg"
         xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 293 171.5"
         style="enable-background:new 0 0 293 171.5;" xml:space="preserve">
-        <path fill="none" class="svgPath path5 animate"
-          d="M3.5,16.5c1.7,0,3,1.3,3,3s-1.3,3-3,3s-3-1.3-3-3S1.8,16.5,3.5,16.5z M3.5,22.5v48l9,11v26 M23.5,41.5v5l-11,15
+        <path fill="none" class="svgPath path5 animate" d="M3.5,16.5c1.7,0,3,1.3,3,3s-1.3,3-3,3s-3-1.3-3-3S1.8,16.5,3.5,16.5z M3.5,22.5v48l9,11v26 M23.5,41.5v5l-11,15
 	v20 M32.5,60.5c1.1,0,2,0.9,2,2s-0.9,2-2,2c-1.1,0-2-0.9-2-2S31.4,60.5,32.5,60.5z M32.5,64.5v8l-9,11v24 M45.5,99.5
 	c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2S44.4,99.5,45.5,99.5z M45.5,103.5v68 M54.5,83.5c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2
 	S53.4,83.5,54.5,83.5z M54.5,87.5v16l-9,14 M82.5,41.5v52l-9,16v18 M222.5,80.5c1.7,0,3,1.3,3,3s-1.3,3-3,3s-3-1.3-3-3
 	S220.8,80.5,222.5,80.5z M222.5,86.5v46 M233.5,41.5v58l-11,11.2 M243.5,65.5c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2
 	S242.4,65.5,243.5,65.5z M243.5,69.5v11l-10,10.2 M254.5,84.5c1.7,0,3,1.3,3,3s-1.3,3-3,3s-3-1.3-3-3S252.8,84.5,254.5,84.5z
-	 M254.5,90.5v14l-7,15V166 M290.5,0.5c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2S289.4,0.5,290.5,0.5z M290.5,4.5v50l-9,13v32" />
+	 M254.5,90.5v14l-7,15V166 M290.5,0.5c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2S289.4,0.5,290.5,0.5z
+	 M290.5,4.5v50l-9,13v32"></path>
       </svg>
       <svg version="1.1" id="bottom" class="svg bottom Layer_2" xmlns="http://www.w3.org/2000/svg"
         xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 293 171.5"
@@ -228,22 +230,22 @@ c0-1.6,1.3-3,2.9-3c0,0,0.1,0,0.1,0" />
 	S53.4,83.5,54.5,83.5z M54.5,87.5v16l-9,14 M82.5,41.5v52l-9,16v18 M222.5,80.5c1.7,0,3,1.3,3,3s-1.3,3-3,3s-3-1.3-3-3
 	S220.8,80.5,222.5,80.5z M222.5,86.5v46 M233.5,41.5v58l-11,11.2 M243.5,65.5c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2
 	S242.4,65.5,243.5,65.5z M243.5,69.5v11l-10,10.2 M254.5,84.5c1.7,0,3,1.3,3,3s-1.3,3-3,3s-3-1.3-3-3S252.8,84.5,254.5,84.5z
-	 M254.5,90.5v14l-7,15V166 M290.5,0.5c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2S289.4,0.5,290.5,0.5z M290.5,4.5v50l-9,13v32" />
+	 M254.5,90.5v14l-7,15V166 M290.5,0.5c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2S289.4,0.5,290.5,0.5z M290.5,4.5v50l-9,13v32"></path>
       </svg>
       <svg version="1.1" id="bottom" class="svg bottom Layer_3" xmlns="http://www.w3.org/2000/svg"
         xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 293 171.5"
         style="enable-background:new 0 0 293 171.5;" xml:space="preserve">
-        <path fill="none" class="svgPath path6 animate"
-          d="M3.5,16.5c1.7,0,3,1.3,3,3s-1.3,3-3,3s-3-1.3-3-3S1.8,16.5,3.5,16.5z M3.5,22.5v48l9,11v26 M23.5,41.5v5l-11,15
+        <path fill="none" class="svgPath path6 animate" d="M3.5,16.5c1.7,0,3,1.3,3,3s-1.3,3-3,3s-3-1.3-3-3S1.8,16.5,3.5,16.5z M3.5,22.5v48l9,11v26 M23.5,41.5v5l-11,15
 	v20 M32.5,60.5c1.1,0,2,0.9,2,2s-0.9,2-2,2c-1.1,0-2-0.9-2-2S31.4,60.5,32.5,60.5z M32.5,64.5v8l-9,11v24 M45.5,99.5
 	c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2S44.4,99.5,45.5,99.5z M45.5,103.5v68 M54.5,83.5c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2
 	S53.4,83.5,54.5,83.5z M54.5,87.5v16l-9,14 M82.5,41.5v52l-9,16v18 M222.5,80.5c1.7,0,3,1.3,3,3s-1.3,3-3,3s-3-1.3-3-3
 	S220.8,80.5,222.5,80.5z M222.5,86.5v46 M233.5,41.5v58l-11,11.2 M243.5,65.5c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2
 	S242.4,65.5,243.5,65.5z M243.5,69.5v11l-10,10.2 M254.5,84.5c1.7,0,3,1.3,3,3s-1.3,3-3,3s-3-1.3-3-3S252.8,84.5,254.5,84.5z
-	 M254.5,90.5v14l-7,15V166 M290.5,0.5c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2S289.4,0.5,290.5,0.5z M290.5,4.5v50l-9,13v32" />
+	 M254.5,90.5v14l-7,15V166 M290.5,0.5c1.1,0,2,0.9,2,2s-0.9,2-2,2s-2-0.9-2-2S289.4,0.5,290.5,0.5z
+	 M290.5,4.5v50l-9,13v32"></path>
       </svg>
       <p class="see-more">See more of what we can make for you!</p>
-      <button class="lets-go"><span class="btn-text">Let's Go!</span> <span class="btn-arrow">❯</></button>
+      <button class="lets-go"><span class="btn-text">Let's Go!</span> <span class="btn-arrow">❯</span></button>
     </div>
   </div>
   <script src="javascript/script.js"></script>
