--- a/project/index.html
+++ b/project/index.html
@@ -103,11 +103,26 @@
         odit
         quaerat laudantium amet?</p>
       <div class="iframeContainer">
-        <img src="image/iframe.svg" alt="" class="pos0 active">
+        <iframe class="pos0 active" title="Inline Frame Example"
+          src="http://www.simpleshowinteractive.com/projects/internal/menus/#/I1">
+        </iframe>
+        <iframe class="pos1" title="Inline Frame Example"
+          src="http://www.simpleshowinteractive.com/projects/internal/menus/#/I2">
+        </iframe>
+        <iframe class="pos2" title="Inline Frame Example"
+          src="http://www.simpleshowinteractive.com/projects/internal/menus/#/I3">
+        </iframe>
+        <iframe class="pos3" title="Inline Frame Example"
+          src="http://www.simpleshowinteractive.com/projects/internal/menus/#/I4">
+        </iframe>
+        <iframe class="pos4" title="Inline Frame Example"
+          src="http://www.simpleshowinteractive.com/projects/internal/menus/#/I5">
+        </iframe>
+        <!-- <img src="image/iframe.svg" alt="" class="pos0 active">
         <img src="image/iframe.svg" alt="" class="pos1">
         <img src="image/iframe.svg" alt="" class="pos2">
         <img src="image/iframe.svg" alt="" class="pos3">
-        <img src="image/iframe.svg" alt="" class="pos4">
+        <img src="image/iframe.svg" alt="" class="pos4"> -->
       </div>
       <button class="arrow arrowLeft"><img src="image/leftArrow.svg" alt=""></button>
       <button class="arrow arrowRight"><img src="image/rightArrow.svg" alt=""></button>
