--- a/project/index.html
+++ b/project/index.html
@@ -178,42 +178,65 @@ c0-1.6,1.3-3,2.9-3c0,0,0.1,0,0.1,0"></path>
 
     <div class="optionsContainer">
       <div class="option option1" data-src="https://simpleshowinteractive.com/projects/internal/dragNdrops">
-        <div class="optionImgContainer"><img src="image/dragNdrop.svg" alt=""></div>
+        <div class="optionImgContainer">
+          <video id="dndex" playsinline loop autoplay preload="auto">
+            <source src="videos/dndex.mp4" type="video/mp4" label="360p" res="360">
+          </video>
+        </div>
         <h4 class="optionHeader">Drag & Drop</h4>
         <p class="optionDescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia deleniti sunt rem ex
           qui? Consequatur consectetur at corrupti laborum.</p>
         <p class="examples">Examples</p>
       </div>
       <div class="option option2" data-src="https://simpleshowinteractive.com/projects/internal/hotspots">
-        <div class="optionImgContainer"><img src="image/hotspot.svg" alt=""></div>
+        <div class="optionImgContainer">
+          <video id="dndex" playsinline loop autoplay preload="auto">
+            <source src="videos/hotspotex.mp4" type="video/mp4" label="360p" res="360">
+          </video>
+        </div>
         <h4 class="optionHeader">Hotspot</h4>
         <p class="optionDescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia deleniti sunt rem ex
           qui? Consequatur consectetur at corrupti laborum.</p>
         <p class="examples">Examples</p>
       </div>
       <div class="option option3" data-src="https://simpleshowinteractive.com/projects/internal/quiz">
-        <div class="optionImgContainer"><img src="image/quiz.svg" alt=""></div>
+        <div class="optionImgContainer">
+          <video id="dndex" playsinline loop autoplay preload="auto">
+            <source src="videos/quizex.mp4" type="video/mp4" label="360p" res="360">
+          </video>
+        </div>
         <h4 class="optionHeader">Quiz</h4>
         <p class="optionDescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia deleniti sunt rem ex
           qui? Consequatur consectetur at corrupti laborum.</p>
         <p class="examples">Examples</p>
       </div>
       <div class="option option4" data-src="https://simpleshowinteractive.com/projects/internal/sortables">
-        <div class="optionImgContainer"><img src="image/sortable1.svg" alt=""></div>
-        <h4 class="optionHeader">Sortables Type 1</h4>
+        <div class="optionImgContainer">
+          <video id="dndex" playsinline loop autoplay preload="auto">
+            <source src="videos/sortex.mp4" type="video/mp4" label="360p" res="360">
+          </video>
+        </div>
+        <h4 class="optionHeader">
+          Sortables
+          <!--Type 1-->
+        </h4>
         <p class="optionDescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia deleniti sunt rem ex
           qui? Consequatur consectetur at corrupti laborum.</p>
         <p class="examples">Examples</p>
       </div>
-      <div class="option option5" data-src="https://simpleshowinteractive.com/projects/internal/sortables2">
-        <div class="optionImgContainer"><img src="image/sortable2.svg" alt=""></div>
-        <h4 class="optionHeader">Sortables Type 2</h4>
-        <p class="optionDescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia deleniti sunt rem ex
-          qui? Consequatur consectetur at corrupti laborum.</p>
-        <p class="examples">Examples</p>
-      </div>
+      <!-- <div class="option option5" data-src="https://simpleshowinteractive.com/projects/internal/sortables2">
+          <div class="optionImgContainer"><img src="image/sortable2.svg" alt=""></div>
+          <h4 class="optionHeader">Sortables Type 2</h4>
+          <p class="optionDescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia deleniti sunt rem ex
+            qui? Consequatur consectetur at corrupti laborum.</p>
+            <p class="examples">Examples</p>
+          </div> -->
       <div class="option option6" data-src="https://simpleshowinteractive.com/projects/internal/custom">
-        <div class="optionImgContainer"><img src="image/custom.svg" alt=""></div>
+        <div class="optionImgContainer">
+          <video id="dndex" playsinline loop autoplay preload="auto">
+            <source src="videos/customex.mp4" type="video/mp4" label="360p" res="360">
+          </video>
+        </div>
         <h4 class="optionHeader">Custom</h4>
         <p class="optionDescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia deleniti sunt rem ex
           qui? Consequatur consectetur at corrupti laborum.</p>
