--- a/project/index.html
+++ b/project/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Document</title>
+  <title>Interactive Webpage</title>
   <link rel="stylesheet" href="css/fonts.css" />
   <link rel="stylesheet" href="css/style.css" />
 </head>
@@ -177,9 +177,9 @@ c0-1.6,1.3-3,2.9-3c0,0,0.1,0,0.1,0"></path>
     </div>
 
     <div class="optionsContainer">
-      <div class="option option1" data-src="https://simpleshowinteractive.com/projects/internal/dragNdrops">
+      <div class="option hidden option1" data-src="https://simpleshowinteractive.com/projects/internal/dragNdrops">
         <div class="optionImgContainer">
-          <video id="dndex" playsinline loop autoplay preload="auto">
+          <video id="dndex" playsinline loop autoplay preload="auto" muted>
             <source src="videos/dndex.mp4" type="video/mp4" label="360p" res="360">
           </video>
         </div>
@@ -188,9 +188,9 @@ c0-1.6,1.3-3,2.9-3c0,0,0.1,0,0.1,0"></path>
           qui? Consequatur consectetur at corrupti laborum.</p>
         <p class="examples">Examples</p>
       </div>
-      <div class="option option2" data-src="https://simpleshowinteractive.com/projects/internal/hotspots">
+      <div class="option hidden option2" data-src="https://simpleshowinteractive.com/projects/internal/hotspots">
         <div class="optionImgContainer">
-          <video id="dndex" playsinline loop autoplay preload="auto">
+          <video id="dndex" playsinline loop autoplay preload="auto" muted>
             <source src="videos/hotspotex.mp4" type="video/mp4" label="360p" res="360">
           </video>
         </div>
@@ -199,9 +199,9 @@ c0-1.6,1.3-3,2.9-3c0,0,0.1,0,0.1,0"></path>
           qui? Consequatur consectetur at corrupti laborum.</p>
         <p class="examples">Examples</p>
       </div>
-      <div class="option option3" data-src="https://simpleshowinteractive.com/projects/internal/quiz">
+      <div class="option hidden option3" data-src="https://simpleshowinteractive.com/projects/internal/quiz">
         <div class="optionImgContainer">
-          <video id="dndex" playsinline loop autoplay preload="auto">
+          <video id="dndex" playsinline loop autoplay preload="auto" muted>
             <source src="videos/quizex.mp4" type="video/mp4" label="360p" res="360">
           </video>
         </div>
@@ -210,9 +210,9 @@ c0-1.6,1.3-3,2.9-3c0,0,0.1,0,0.1,0"></path>
           qui? Consequatur consectetur at corrupti laborum.</p>
         <p class="examples">Examples</p>
       </div>
-      <div class="option option4" data-src="https://simpleshowinteractive.com/projects/internal/sortables">
+      <div class="option hidden option4" data-src="https://simpleshowinteractive.com/projects/internal/sortables">
         <div class="optionImgContainer">
-          <video id="dndex" playsinline loop autoplay preload="auto">
+          <video id="dndex" playsinline loop autoplay preload="auto" muted>
             <source src="videos/sortex.mp4" type="video/mp4" label="360p" res="360">
           </video>
         </div>
@@ -224,16 +224,16 @@ c0-1.6,1.3-3,2.9-3c0,0,0.1,0,0.1,0"></path>
           qui? Consequatur consectetur at corrupti laborum.</p>
         <p class="examples">Examples</p>
       </div>
-      <!-- <div class="option option5" data-src="https://simpleshowinteractive.com/projects/internal/sortables2">
+      <!-- <div class="option hidden option5" data-src="https://simpleshowinteractive.com/projects/internal/sortables2">
           <div class="optionImgContainer"><img src="image/sortable2.svg" alt=""></div>
           <h4 class="optionHeader">Sortables Type 2</h4>
           <p class="optionDescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia deleniti sunt rem ex
             qui? Consequatur consectetur at corrupti laborum.</p>
             <p class="examples">Examples</p>
           </div> -->
-      <div class="option option6" data-src="https://simpleshowinteractive.com/projects/internal/custom">
+      <div class="option hidden option6" data-src="https://simpleshowinteractive.com/projects/internal/custom">
         <div class="optionImgContainer">
-          <video id="dndex" playsinline loop autoplay preload="auto">
+          <video id="dndex" playsinline loop autoplay preload="auto" muted>
             <source src="videos/customex.mp4" type="video/mp4" label="360p" res="360">
           </video>
         </div>
