started remaking PG&E menu

--- a/project/index.html
+++ b/project/index.html
@@ -100,8 +100,7 @@
       <h3 class="menus">Menus</h3>
       <p class="menus-des">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia odit assumenda, cupiditate
         molestias, maiores quod culpa modi asperiores expedita ex ipsam quas, perspiciatis beatae ducimus cumque! Vel
-        odit
-        quaerat laudantium amet?</p>
+        odit quaerat laudantium amet?</p>
       <div class="iframeContainer">
         <iframe class="pos0 active" title="Inline Frame Example"
           src="https://www.simpleshowinteractive.com/projects/internal/menus/#/I1">
@@ -283,7 +282,8 @@ c0-1.6,1.3-3,2.9-3c0,0,0.1,0,0.1,0"></path>
 	 M290.5,4.5v50l-9,13v32"></path>
       </svg>
       <p class="see-more">See more of what we can make for you!</p>
-      <button class="lets-go"><span class="btn-text">Let's Go!</span> <span class="btn-arrow">❯</span></button>
+      <button class="lets-go"><span class="btn-text">Let's Go!</span> <span class="btn-arrow"><img
+            src="image/arrowRight.svg" alt=""></span></button>
     </div>
   </div>
   <script src="javascript/script.js"></script>
