reverted to old closing method, going to remove items from courses to increase performance

--- a/project/index.html
+++ b/project/index.html
@@ -286,7 +286,7 @@ c0-1.6,1.3-3,2.9-3c0,0,0.1,0,0.1,0"></path>
     <iframe class="interactioniframe" src="https://simpleshowinteractive.com/projects/internal/dragNdrops">
     </iframe>
   </div>
-  <div class="hotspotiframe interactionIframeContainer hidden">
+  <!-- <div class="hotspotiframe interactionIframeContainer hidden">
     <iframe class="interactioniframe" src="https://simpleshowinteractive.com/projects/internal/hotspots">
     </iframe>
   </div>
@@ -301,10 +301,10 @@ c0-1.6,1.3-3,2.9-3c0,0,0.1,0,0.1,0"></path>
   <div class="customiframe interactionIframeContainer hidden">
     <iframe class="interactioniframe" src="https://simpleshowinteractive.com/projects/internal/custom">
     </iframe>
-  </div>
+  </div> -->
+  <script src="javascript/script.js"></script>
   <script src="javascript/drawScroll.js"></script>
   <script src="javascript/carousel.js"></script>
-  <script src="javascript/script.js"></script>
 </body>
 
 </html>
